# fitfreak-ai

./: .gitignore  README.md  package.json
backend/: .env  .env.example  Cargo.toml
backend/migrations/: 001_initial_schema.sql
backend/src/: ai.rs  auth.rs  handlers.rs  main.rs  models.rs
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  api.ts  index.css
frontend/src/pages/: AICoach.tsx  Auth.tsx  Dashboard.tsx  MealPlanner.tsx  Profile.tsx  WorkoutLog.tsx
